replicaset.yaml
apiVersion: v1
kind: Service
metadata:
  name: replica-set-service
spec:
  selector:
    tier: etape-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
