ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress
  labels:
    app: publicecho
spec:
  replicas: 4
  selector:
    matchLabels:
      app: publicecho
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: publicecho
    spec:
      containers:
        - name: ingress
          image: registry.cluster.wik.cloud/public/echo
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: service-ingress
spec:
  selector:
    app: publicecho
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ingress
spec:
  rules:
    - host: wik-tps-04-gosset.net
      http:
        paths:
          - path: /ping
            pathType: Prefix
            backend:
              service:
                name: service-ingress
                port:
                  number: 8080
